# Euro-Truck-Simulator-2-Lane-Assist

./: .gitignore  .gitmodules  404.html  AGENTS.md  AppUI.py  CONTRIBUTING.md  ETS2LA.Linux.slnf  ETS2LA.sln  FrequentlyAskedQuestions.md  Install.bat  LICENSE  LaneDetectionTypes.md  MainFile.py  Oneclickinstall.bat  README.md  RUN_THIS_FIRST_linux.sh  Run.bat  UltraFastLaneDetectionInferenccePytorchLICENSE  UltraFastLaneDetectionLICENSE  WIP.md  __init__.py  __p.py  build.bat  build.sh  buildDocs.bat  buildWiki.bat  cc.py  changelog.txt  currentProfile.txt  data.json  debug.bat  default.json  defaultCPU.json  depthPrediction.py  downgrade.bat  ets2LaneDetection.py  ets2sdkclient.py  generate_translations.py  index.html  install.py  (+37 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature_request  feature_request.yml  support.md  support.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy.yaml  docs.yml  main.yml  pr-build.yaml  retype-action.yml  translations.yaml
.wiki/: 404.html  CNAME  changelog.txt  index.html  license  robots.txt
.wiki/blog/: feed.xml  index.html
.wiki/changelog/: index.html
.wiki/docs/: index.html  main.html
.wiki/panels/: index.html
.wiki/src/: index.html
.wiki/tags/: index.html
ETS2LA/: ETS2LA.csproj  Program.cs  ReleaseNotes.md  core.py  global_settings.json  variables.py
ETS2LA.AR/: AR.cs
ETS2LA.Audio/: AudioHandler.cs  Classes.cs  ETS2LA.Audio.csproj
ETS2LA.Backend/: ETS2LA.Backend.csproj  Program.cs
ETS2LA.Controls/: Classes.cs  Defaults.cs  ETS2LA.Controls.csproj  Program.cs  Shared.cs
ETS2LA.Game/: Classes.cs  ETS2LA.Game.csproj  Installation.cs  Program.cs  Steam.cs  Utils.cs
ETS2LA.Logging/: ETS2LA.Logging.csproj  Program.cs
ETS2LA.Notifications/: Classes.cs  Notifications.cs
ETS2LA.Overlay/: AR.cs  Bindings.cs  Classes.cs  ETS2LA.Overlay.csproj  Overlay.cs  WinHelpers.cs
ETS2LA.Settings/: ETS2LA.Settings.csproj  Program.cs
ETS2LA.Shared/: Controls.cs  ETS2LA.Shared.csproj  Memory.cs  PluginUi.cs  Shared.cs  Telemetry.cs
ETS2LA.State/: ETS2LA.State.csproj  Program.cs
ETS2LA.Telemetry/: Classes.cs  ETS2LA.Telemetry.csproj  Program.cs
ETS2LA.UI/: App.axaml  App.axaml.cs  ETS2LA.UI.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
Euro-Truck-Simulator-2-Lane-Assist-main/: MainFile.py  changelog.txt  ets2LaneDetection.py
FAQ/: FAQ.yml  FrequentlyAskedQuestions.md  LaneDetectionTypes.md  tracking.md  translating.md
Installer Sources/: Convert-To-EXE.txt  installer.ps1
InstallerSources/: installer.ps1
Interface/: next.config.mjs  package.json
LSTRLaneDetection/: README.md
MiDaS/: .gitignore  README.md  imageDepthEstimation.py  videoDepthEstimation.py  webcamDepthEstimation.py
Old/: MainFile.py  ets2LaneDetection.py  start.bat
Pages/: _logs.py  _telemetry.py  about.py  catalogue.py  changelog.py  chat.py  controls.py  feedback.py  global_settings.py  onboarding.py  performance.py  plugins.py  sdk_installation.py  stats.py  telemetry.py  updater.py
Translations/: comments.json  convert_to_yaml.py  en.json  en.yaml  fi.json  fi.yaml  hu.json  hu.yaml  it.json  it.yaml  ja.json  keys.json  keys.yaml  languages.txt  pl.json  pl.yaml  test.json  tr.json  tr.yaml  zh-CN.yaml  zh-TW.yaml  zh_CN.json  zh_TW.json
UltraFastLaneDetection/: __init__.py  ultrafastLaneDetector.py
Updater/: updater.py
Visualization/: INSTRUCTIONS.txt
blog/: V1.10.0.md  V1.10.Minor.md  V1.11.0.md  V1.11.Minor.md  V1.9.0.md  V1.9.Minor.md  index.html  index.md
changelog/: index.html  index.md
docs/: index.html  index.md  install.html
frontend/: .eslintrc.json  .gitignore  global.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend_old/: next.config.mjs  package.json  tailwind.config.ts
frontendv2/: package-lock.json  package.json  tailwind.config.ts
godot/: INSTRUCTIONS.txt  New Text Document.txt
lanedetection/: info.md
pages/: about.py  changelog.py  global_settings.py  sdk_installation.py  stats.py  updater.py
pdoc/: config.mako  css.mako
plugins/: By Tags.md  Only Panels.md  Only Plugins.md  __init__.py  plugin.py
profiles/: currentProfile.txt  default.json  defaultCPU.json
src/: __init__.py  console.md  console.py  controls.md  controls.py  gamefiles.md  gamefiles.py  helpers.md  helpers.py  index.html  index.md  loading.md  loading.py  logger.md  logger.py  mainUI.md  mainUI.py  models.py  pytorch.py  scsLogReader.md  scsLogReader.py  server.md  server.py  settings.md  settings.py  sounds.md  sounds.py  translator.md  translator.py  updater.py  variables.md  variables.py
tags/: index.html
translations/: comments.json  en.json  fi.json  hu.json  keys.json  zh_CN.json  zh_TW.json
tutorials/: PluginCreation.md  debug.md  index.md  installation.md  tutorials.yml
ultrafastLaneDetector/: __init__.py  ultrafastLaneDetector.py
updater/: updater.py  updater.tcss
wip/: index.html
(+1712 files in other folders)
