[project]
name = "ETS2LA"
description = "Plugin based self driving program for ETS2 and ATS."
readme = "README.md"
version = "0.3.1"

# Automatically handled by uv
requires-python = "==3.12.*"
dependencies = [
    "audioop-lts ; python_full_version >= '3.13'",
    "beautifulsoup4>=4.13.5",
    "bettercam>=1.0.0",
    "dearpygui>=2.1.0",
    "fastapi>=0.116.1",
    "ftfy>=6.3.1",
    "gitpython>=3.1.45",
    "keyboard>=0.13.5",
    "langcodes>=3.5.0",
    "matplotlib>=3.10.6",
    "mss>=10.1.0",
    "numpy==2.2.6",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "orjson>=3.11.3",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "py-sharedmemory>=2.0.1",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pypresence>=4.3.0",
    "pyproj>=3.7.2",
    "pyttsx3>=2.99",
    "pywebview==5.1",
    "pywin32==306",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "rpyc>=6.0.2",
    "scipy>=1.16.1",
    "screeninfo>=0.8.1",
    "setuptools>=80.9.0",
    "simplewindow>=1.0",
    "sounddevice>=0.5.2",
    "textual==1.0.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "vdf>=3.4",
    "websockets==13.1",
    "windows-capture==1.3.6 ; sys_platform == 'win32'",
    "winsdk>=1.0.0b10 ; sys_platform == 'win32'",
    "zeroconf>=0.147.0",
]

authors = [
  {name = "Tumppi066", email = "contact@ets2la.com"},
  {name = "ETS2LA Contributors"}
]

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["ETS", "ATS", "Self Driving", "Plugin"]

[project.urls]
Homepage = "https://ets2la.com"
Documentation = "https://ets2la.com/developers"
Repository = "https://github.com/ETS2LA/Euro-Truck-Simulator-2-Lane-Assist"

[tool.ruff]
lint.select = [
  "A", # prevent keywords that are similar to builtins
  "B", # bugbear: Catch common issues before they become bugs
  "E", # pycodestyle
  "F", # pyflakes
  "Q", # ensure double quotes are used
]
lint.ignore = [
  "E501", # line too long
]

[tool.ruff.lint.flake8-builtins]
ignorelist = [
  "id",     # 'id' is used in a lot of places
  "map",    # 'map' is used in the Map plugin
  "next",   # 'next' would be very annoying to change, what else would we call it?
  "print",  #  many plugins do `from rich import print` to override the builtin print
  "type",   # 'type' would similarly be annoying to change
  "object", # 'object' is also used in a lot of places,
  "min",    # UI elements use these names often
  "max",    # ^
]